--- a/README
+++ b/README
@@ -3,3 +3,5 @@ bash <(wget -qO- https://raw.githubusercontent.com/mlyxshi/shell/main/ssh)
 bash <(wget -qO- https://raw.githubusercontent.com/mlyxshi/shell/main/debian)
 
 bash <(wget -qO- https://raw.githubusercontent.com/mlyxshi/shell/main/bootloader)
+
+bash <(wget -qO- https://raw.githubusercontent.com/mlyxshi/shell/main/desktop)
